Redis 적용 및 테스트코드 작성  - 직접 Haversine 공식 사용하는 `[DirectionService][buildDirectionList] - [SpotSearchService][searchSpotDtoList]` 에 캐싱 적용  - 카카오 주소변환 `requestAddressSearch` 메서드에 캐싱 적용  - 카카오 카테고리 검색 `buildDirectionListByCategoryApi` 메서드에 캐싱 적용